[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Font3.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://points_pivot.tscn" type="PackedScene" id=3]
[ext_resource path="res://oxygen_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://game_over.tscn" type="PackedScene" id=5]
[ext_resource path="res://w_key.png" type="Texture" id=6]
[ext_resource path="res://water_background_environment.tscn" type="PackedScene" id=7]
[ext_resource path="res://PeopleCount.tscn" type="PackedScene" id=8]
[ext_resource path="res://a_key.png" type="Texture" id=9]
[ext_resource path="res://d_key.png" type="Texture" id=10]
[ext_resource path="res://s_key.png" type="Texture" id=11]
[ext_resource path="res://space_key.png" type="Texture" id=23]
[ext_resource path="res://arrow_right_key.png" type="Texture" id=24]
[ext_resource path="res://arrow_left_key.png" type="Texture" id=25]
[ext_resource path="res://arrow_up_key.png" type="Texture" id=26]
[ext_resource path="res://arrow_down_key.png" type="Texture" id=27]
[ext_resource path="res://control_ui_handler.gd" type="Script" id=28]
[ext_resource path="res://empty_people.tscn" type="PackedScene" id=29]
[ext_resource path="res://Tutorial.gd" type="Script" id=30]
[ext_resource path="res://joystick.png" type="Texture" id=31]
[ext_resource path="res://a_button.png" type="Texture" id=32]
[ext_resource path="res://tutorial_text.gd" type="Script" id=33]
[ext_resource path="res://tutorial_people_spawner.gd" type="Script" id=34]

[sub_resource type="DynamicFont" id=12]
size = 5
outline_size = 1
font_data = ExtResource( 2 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 30 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 128, 61 )
current = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 124, 64 )

[node name="Controls" type="Node2D" parent="."]
position = Vector2( 113.5, 28 )
script = ExtResource( 28 )

[node name="wasd_keys" type="Node2D" parent="Controls"]
position = Vector2( -113.5, -28 )

[node name="a_key" type="Sprite" parent="Controls/wasd_keys"]
position = Vector2( 94.5, 27 )
texture = ExtResource( 9 )
hframes = 2

[node name="s_key" type="Sprite" parent="Controls/wasd_keys"]
position = Vector2( 100.5, 27 )
z_index = 1
texture = ExtResource( 11 )
hframes = 2

[node name="d_key" type="Sprite" parent="Controls/wasd_keys"]
position = Vector2( 106.5, 27 )
texture = ExtResource( 10 )
hframes = 2

[node name="w_key" type="Sprite" parent="Controls/wasd_keys"]
position = Vector2( 100.5, 21 )
texture = ExtResource( 6 )
hframes = 2

[node name="arrow_keys" type="Node2D" parent="Controls"]
visible = false
position = Vector2( -113.5, -28 )

[node name="left_key" type="Sprite" parent="Controls/arrow_keys"]
position = Vector2( 94.5, 27 )
texture = ExtResource( 25 )
hframes = 2

[node name="down_key" type="Sprite" parent="Controls/arrow_keys"]
position = Vector2( 100.5, 27 )
z_index = 1
texture = ExtResource( 27 )
hframes = 2

[node name="right_key" type="Sprite" parent="Controls/arrow_keys"]
position = Vector2( 106.5, 27 )
texture = ExtResource( 24 )
hframes = 2

[node name="up_key" type="Sprite" parent="Controls/arrow_keys"]
position = Vector2( 100.5, 21 )
texture = ExtResource( 26 )
hframes = 2

[node name="generic_key" type="Node2D" parent="Controls"]

[node name="space_key" type="Sprite" parent="Controls/generic_key"]
position = Vector2( 23, -1 )
texture = ExtResource( 23 )
hframes = 2

[node name="gamepad" type="Node2D" parent="Controls"]
visible = false
position = Vector2( 8, 0 )

[node name="joystick" type="Sprite" parent="Controls/gamepad"]
position = Vector2( -0.5, 0 )
texture = ExtResource( 31 )
hframes = 5

[node name="a_button" type="Sprite" parent="Controls/gamepad"]
position = Vector2( 15, 1 )
texture = ExtResource( 32 )
hframes = 2

[node name="Tween" type="Tween" parent="Controls"]

[node name="Environment" parent="." instance=ExtResource( 7 )]

[node name="TutorialPeopleSpawner" type="Node" parent="."]
script = ExtResource( 34 )

[node name="Spawn1" type="Position2D" parent="TutorialPeopleSpawner"]
position = Vector2( -29, 84 )

[node name="Spawn2" type="Position2D" parent="TutorialPeopleSpawner"]
position = Vector2( 281, 84 )

[node name="SpawnTime" type="Timer" parent="TutorialPeopleSpawner"]
wait_time = 3.0

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="PeopleCount" parent="UserInterface" instance=ExtResource( 8 )]
visible = false
position = Vector2( 11, 9 )

[node name="EmptyPeople" parent="UserInterface" instance=ExtResource( 29 )]
visible = false
z_index = -1

[node name="Control" type="Control" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PointsPivot" parent="UserInterface/Control" instance=ExtResource( 3 )]
visible = false

[node name="OxygenBarPivot" parent="UserInterface/Control" instance=ExtResource( 4 )]
visible = false

[node name="GameOver" parent="UserInterface/Control" instance=ExtResource( 5 )]

[node name="TutorialText" type="Control" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 33 )

[node name="MainText" type="Label" parent="UserInterface/TutorialText"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -13.0
margin_bottom = -5.0
custom_colors/font_outline_modulate = Color( 0.12549, 0.0823529, 0.2, 1 )
custom_colors/font_color_shadow = Color( 0.12549, 0.0823529, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 12 )
text = "welcome to the tutorial"
align = 1
valign = 1

[node name="FinishTextTimer" type="Timer" parent="UserInterface/TutorialText"]
wait_time = 1.3
one_shot = true

[connection signal="tween_completed" from="Controls/Tween" to="Controls" method="_on_Tween_tween_completed"]
[connection signal="timeout" from="TutorialPeopleSpawner/SpawnTime" to="TutorialPeopleSpawner" method="_on_SpawnTime_timeout"]
[connection signal="timeout" from="UserInterface/TutorialText/FinishTextTimer" to="UserInterface/TutorialText" method="_on_FinishTextTimer_timeout"]
